# simple-diy-synth-inventory

./: .gitignore  =2.9  pyproject.toml
.claude/: settings.local.json
boms/: README.md
src/eurorack_inventory/: app.py
src/eurorack_inventory/db/: connection.py
src/eurorack_inventory/db/migrations/: 004_assignment_runs.sql  005_summary_view_package.sql  006_bom_extraction.sql
src/eurorack_inventory/domain/: enums.py  models.py
src/eurorack_inventory/repositories/: bom.py  parts.py  projects.py  storage.py
src/eurorack_inventory/services/: assignment.py  backup.py  bom.py  bom_extractor.py  bom_matching.py  bom_normalizer.py  classifier.py  common.py  csv_backup.py  dashboard.py  inventory.py  projects.py  search.py  settings.py  storage.py
src/eurorack_inventory/ui/: assignment_dialog.py  bom_match_dialog.py  bom_models.py  boms_screen.py  inventory_screen.py  main_window.py  models.py  part_dialog.py  projects_screen.py  settings_dialog.py  shopping_list_dialog.py  storage_config_dialog.py  storage_screen.py  styles.py
tests/: test_assignment.py  test_assignment_dialog.py  test_bom_extractor.py  test_bom_normalizer.py  test_bom_repo.py  test_bom_service.py  test_boms_screen.py  test_classifier.py  test_inventory.py  test_storage_config.py  test_storage_screen.py
